# prediction-goes-fium

./: .gitignore  README.md  data_prep.py  dataset_prep.py  experiment_tracking_utils.py  load_dataset.py  mocked_models.py  model_hyperp_suggestion.py  model_utils.py  optuna_hyperparameter.py  prediction_data_loader.py  predictioner.py  pyproject.toml
mlruns/0/: meta.yaml
mlruns/0/78ec903abb54490687f95bc7d63e2c2d/: meta.yaml
mlruns/0/78ec903abb54490687f95bc7d63e2c2d/metrics/: accuracy
mlruns/0/78ec903abb54490687f95bc7d63e2c2d/params/: features
mlruns/0/78ec903abb54490687f95bc7d63e2c2d/tags/: mlflow.log-model.history  mlflow.runName  mlflow.source.git.commit
mlruns/0/cc42fbe89e3a4011a94eea07c1d7a8a6/: meta.yaml
mlruns/0/cc42fbe89e3a4011a94eea07c1d7a8a6/tags/: mlflow.runName  mlflow.source.name
model_datasets/: first_rf  mnb_first
race_results/: 2024_spa
