[tool.poetry]
name = "dataload-and-predict"
version = "0.1.0"
description = ""
authors = ["ManuelM512 <manuel.mongelos@correo.ucu.edu.uy>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.2"
numpy = "^2.0.0"
matplotlib = "^3.9.1"
scikit-learn = "^1.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
